
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


struct TYPE_2__ {int s_addr; } ;
struct sockaddr_in {int sin_port; int sin_family; TYPE_1__ sin_addr; } ;
typedef int SockAdr ;
typedef int SOCKET ;
typedef int SOCKADDRCAST ;


 int AF_INET ;
 int IPPROTO_TCP ;
 scalar_t__ SOCKET_ERROR ;
 int SOCK_STREAM ;
 int WSAGetLastError () ;
 scalar_t__ bind (int,int ,int) ;
 int closesocket (int) ;
 int htons (int) ;
 int inet_addr (char*) ;
 scalar_t__ listen (int,int) ;
 int memset (struct sockaddr_in*,int ,int) ;
 int printf (char*,...) ;
 int socket (int ,int ,int ) ;

SOCKET openlistensocket(void) {
   SOCKET s;
   struct sockaddr_in SockAdr;


   s = socket(AF_INET, SOCK_STREAM, IPPROTO_TCP);

   memset(&SockAdr, 0, sizeof(SockAdr));
   SockAdr.sin_addr.s_addr = inet_addr("0.0.0.0") ;
   SockAdr.sin_family=AF_INET;
   SockAdr.sin_port=htons(2680);

   printf("2: Starting\n");

   if(bind(s, (SOCKADDRCAST)&SockAdr, sizeof(SockAdr))) {

      printf("Failed to open, %u\n",WSAGetLastError());

      closesocket(s);
      return(-1);
   } else
      if(listen(s, 10)!=SOCKET_ERROR)
        return(s);
      else {
        printf("Failed to open listen socket (listen, %u)\n",WSAGetLastError());

        closesocket(s);
        return(-1);
      }
}
